--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+#mave
+#java 17
+#spring-boot 3.4.2
+
+#Added Dependencies
+#Spring Web
+#Spring Data JPA
+#MySQL Drive
+
+server.port:8081
 spring.application.name=BookApi
+spring.datasource.url=jdbc:mysql://localhost:3306/bookapi
+spring.datasource.username=root
+spring.datasource.password=Vibhor@1905
+spring.jpa.hibernate.ddl-auto=update
+server.servlet.context-path=/api
